--- a/index.html
+++ b/index.html
@@ -1,12 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400&display=swap" rel="stylesheet">
+
+    <!-- external css -->
+    <link rel="stylesheet" href="style.css">
+
     <title>Nutri</title>
 </head>
-<body>
-    <h1>Hello</h1>
+
+<body style="font-family: 'Ubuntu', sans-serif;">
+    <div>
+
+
+        <!-- navbar start -->
+
+        <nav class="navbar navbar-expand-lg  bg-light sticky-top shadow " id="mainNav">
+            <div class="container px-4 py-1">
+
+                <a class="navbar-brand fw-bold fs-3" style="letter-spacing:2px;" href="/index.html">Nutri-Fit</a>
+
+                <button class="navbar-toggler border border-white " type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                    aria-label="Toggle navigation"><img
+                        src="https://img.icons8.com/material-outlined/24/000000/plus--v2.png" />
+                </button>
+
+                <div class="collapse navbar-collapse fw-semibold" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link " href="/aboutus.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/login.html">Login | Signup</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- navbar end -->
+
+
+        <div class="p-3 mb-2  ">
+
+            <div class="container">
+
+
+                <!-- into start -->
+                <div class="row  py-5 valuecard" style="background-color: rgba(243, 243, 243, 0.777) ;">
+                    <div class="col-sm-6  d-flex flex-column justify-content-center ">
+
+
+                        <h1 class="fw-bold py-2 m-2">Web Squad'5' Presents</h1>
+                        <h3 class="fw-normal m-2">Want to understand the fundamental of good nutrition & How food fues
+                            your body then
+                            <BR>
+                            Don't worry, Web Squad'5' Presents Nutri-Fit
+                        </h3>
+
+                        <span class="py-3 m-2">
+                            <button type="button" class="btn btn-primary rmdbut rounded-1">Read More <img class="redbtn"
+                                    src="img/icons8-arrow-25.png" /> </button>
+                        </span>
+
+
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="img-fluid" src="img/intro.png" alt="">
+                    </div>
+                </div>
+                <!-- intro end -->
+
+                <hr class="m-5">
+
+                <!-- who we are start -->
+                <div class="row  py-5 valuecard " style="background-color: rgba(243, 243, 243, 0.777) ;">
+                    <div class="col-sm-6">
+                        <img class="img-fluid" src="img/whoweare.png" alt="">
+                    </div>
+                    <div class="col-sm-5  d-flex flex-column justify-content-center">
+                        <h6 class="fw-bold">WHO WE ARE</h6>
+
+                        <h4 class="fw-bold py-2">We are First year enthusiast Engineering Students having ignited minds
+                            creating our first ever site that will help alot of people</h4>
+                        <p>Hola Peeps! You are at right place !This site takes up the patient's information and
+                            prescription provided by the doctor and converts it into a Qr code this code is provided to
+                            patient through mail so that the chemist can scan it and provide him/her the respective
+                            medicines</p>
+
+                    </div>
+                </div>
+                <!-- who we are end -->
+
+                <hr class="m-5">
+
+                <!-- our VALUES start -->
+                <div class="container text-center m-1">
+                    <div class="row">
+                        <div class="col-md-12 my-4">
+                            <h6 class="fw-bold">OUR VALUES</h6>
+                            <h3 class="fw-bold">So ! What Problems does it solve and what makes it different ? </h3>
+                        </div>
+                    </div>
+
+
+                    <!-- our value card start -->
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col ">
+                            <div class="card h-100 border-0 shadow valuecard">
+                                <img src="img/uniqueidea.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">A unique thought.</h5>
+                                    <p class="card-text">The thought process behind this actually differentiates it from
+                                        all other apps / sites</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col ">
+                            <div class="card h-100 border-0 shadow valuecard">
+                                <img src="img/uniqueidea.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">A unique thought.</h5>
+                                    <p class="card-text">The thought process behind this actually differentiates it from
+                                        all other apps / sites</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col ">
+                            <div class="card h-100 border-0 shadow valuecard">
+                                <img src="img/uniqueidea.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">A unique thought.</h5>
+                                    <p class="card-text">The thought process behind this actually differentiates it from
+                                        all other apps / sites</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- our value card end -->
+
+                </div>
+                <!-- our value end -->
+
+                <hr class="m-5">
+
+                <!-- Contact start -->
+                <div class="container mb-1">
+
+                    <div class="text-center ">
+                        <div class="row">
+                            <div class="col-md-12 m2-4">
+                                <h6 class="fw-bold">CONTACT</h6>
+                                <h1 class="fw-bold">Contact Us</h1>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Contact Card Start -->
+
+                    <div class="row row-cols-1 row-cols-md-4 g-4">
+
+                        <div class="col">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <img src="img/icons8-location-50.png" class="my-3" alt="">
+                                    <h5 class="card-title fw-bold">Address</h5>
+                                    <p class="card-text">................ <br> ........................................
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <img src="img/icons8-call-50.png" class="my-3" alt="">
+                                    <h5 class="card-title fw-bold">Call Us</h5>
+                                    <p class="card-text">+91 1234567890 <br> +91 0987654321 </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <img src="img/icons8-mail-50.png" class="my-3" alt="">
+                                    <h5 class="card-title fw-bold">Email Us</h5>
+                                    <p class="card-text">help@nutrifit.com<br> nutrifithelp@nutrifit.com </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <img src="img/icons8-linkedin-50.png" class="my-3" alt="">
+                                    <h5 class="card-title fw-bold">LinkedIn</h5>
+                                    <p class="card-text">................ <br> ........................................
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <!-- Contact Start end -->
+                </div>
+                <!-- Contact end -->
+
+
+                <!-- footer start -->
+                <div className="container">
+                    <div class="text-center mt-5 ">
+                        <div className="copyright">
+                            &copy; Copyright <strong><span>Web Squad'5'</span></strong>. All Rights Reserved
+                        </div>
+                    </div>
+                </div>
+                <!-- footer end -->
+
+
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
