--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg  bg-light sticky-top shadow " id="mainNav">
             <div class="container px-4 py-1">
 
-                <a class="navbar-brand fw-bold fs-3" style="letter-spacing:2px;" href="/index.html">Nutri-Fit</a>
+                <a class="navbar-brand fw-bold fs-3" style="letter-spacing:2px;" href="Nutri/index.html">Nutri-Fit</a>
 
                 <button class="navbar-toggler border border-white " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
