--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg  bg-light sticky-top shadow " id="mainNav">
             <div class="container px-4 py-1">
 
-                <a class="navbar-brand fw-bold fs-3" style="letter-spacing:2px;" href="/index.html">Nutri-Fit</a>
+                <a class="navbar-brand fw-bold fs-3" style="letter-spacing:2px;" href="Nutri/index.html">Nutri-Fit</a>
 
                 <button class="navbar-toggler border border-white " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -38,9 +38,9 @@
 
                 <div class="collapse navbar-collapse fw-semibold" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link " href="/aboutus.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link " href="Nutri/aboutus.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/login.html">Login | Signup</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Nutri/login.html">Login | Signup</a></li>
                     </ul>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                                         </div>
 
                                         <div class="text-center">
-                                            <p>Already User ? <a href="/login.html">Sign In</a>  </p>
+                                            <p>Already User ? <a href="Nutri/login.html">Sign In</a>  </p>
                                         </div>
                                     </form>
                                 </div>
