--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <div class="collapse navbar-collapse fw-semibold" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link " href="aboutus.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link " href="/aboutus.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="login.html">Login | Signup</a></li>
                     </ul>
