--- a/aboutus.html
+++ b/aboutus.html
@@ -91,7 +91,7 @@
 
                         <div class="p-4">
 
-                            <h3>Subject-Matter Expert Writers</h3>
+                            <h3 class="fw-bold" >Subject-Matter Expert Writers</h3>
 
                             <h5 class="aboutjust">Our writers are notable voices in their respective disciplines, from
                                 registered dietitians to certified personal trainers to physicians. These leading
@@ -107,7 +107,7 @@
 
                         <div class="p-4">
 
-                            <h3>Diverse Voices</h3>
+                            <h3 class="fw-bold" >Diverse Voices</h3>
 
                             <h5 class="aboutjust">We have a renewed commitment to help all people navigate their health
                                 and well-being—regardless of race, gender identity, sexual orientation, age, religion,
@@ -125,7 +125,7 @@
 
                         <div class="p-4">
 
-                            <h3>Editorial Team</h3>
+                            <h3 class="fw-bold" >Editorial Team</h3>
 
                             <h5 class="aboutjust">Our highly-skilled editorial team manages all of the content you read.
                                 Each individual article has several people behind it working to make sure it’s
@@ -140,7 +140,7 @@
 
                         <div class="p-4">
 
-                            <h3>Fact Check</h3>
+                            <h3 class="fw-bold" >Fact Check</h3>
 
                             <h5 class="aboutjust">Our team of qualified and experienced fact checkers provides a
                                 critical step in our commitment to content integrity. Fact checkers rigorously
@@ -158,7 +158,7 @@
 
                         <div class="p-4">
 
-                            <h3>News</h3>
+                            <h3 class="fw-bold" >News</h3>
 
                             <h5 class="aboutjust">Now, more than ever, people are going online for their news. It is our
                                 responsibility to ensure that every piece of news published on Nutri-Fit is held to the
@@ -178,7 +178,7 @@
 
                         <div class="p-4">
 
-                            <h3>Up-to-Date Information</h3>
+                            <h3 class="fw-bold" >Up-to-Date Information</h3>
 
                             <h5 class="aboutjust">Times change and so does information. With help from our
                                 subject-matter experts and Review Board, our editorial team routinely evaluates our
